cluster/core/rook/dash-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rook-dashboard
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  ports:
    - name: dashboard
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "rook-dashboard"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-auth-local@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "rook.${SECRET_INTERNAL_DOMAIN}"
      secretName: "rook-dashboard-tls"
  rules:
    - host: "rook.${SECRET_INTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
