cluster/core/rook/s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-s3
  namespace: rook-ceph
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
    external-dns.alpha.kubernetes.io/target: "home.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: "s3.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "s3.${SECRET_DOMAIN}"
        - "*.s3.${SECRET_DOMAIN}"
      secretName: "s3-wildcard-tls"
  rules:
    - host: "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-general-s3
                port:
                  name: http
    - host: "*.s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-general-s3
                port:
                  name: http
